src/objects/Docusign_Email_Template__mdt.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>CLM-MC-CLMCMA-13494 - This field is used to store the type of contact.</description>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Template_Label__c</fullName>
        <label>Email Template Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Unique_Name__c</fullName>
        <label>Email Template Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>CLM-MC-CLMCMA-18410 - This field is used to store object api name.</description>
        <label>Object API Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CLM Docusign Email Templates</label>
    <pluralLabel>CLM Docusign Email Templates</pluralLabel>
</CustomObject>